--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,16 +1,19 @@
-<h1>Your links</h1>
+<h1>Your links <small><%= link_to "Add New Link", "/links/new" %></small></h1>
 
-<table>
+
+<table class="table table-striped table-hover">
   <tr>
     <th>Slug</th>
     <th>Target URL</th>
     <th>Created At</th>
+    <th>Actions</th>
   </tr>
   <% @links.each do |link| %>
     <tr>
-      <td><%= link.slug %></td>
-      <td><%= link.target_url %></td>
-      <td><%= link.created_at %></td>
+      <td><%= link_to link.slug, "/#{link.slug}", :class => "block-link" %></td>
+      <td><%= link_to link.target_url, link.target_url, :class => "block-link" %></td>
+      <td><%= link_to link.created_at, "/links/#{link.id}", :class => "block-link" %></td>
+      <td><%= link_to "Edit", "/links/#{link.id}edit" %> <%= link_to "Delete", "/links/#{link.id}", :method => "delete", :data => {:confirm => "Are you sure you would like to delete the link: #{link.slug}?"} %></td>
     </tr>
   <% end %>
-<table>
+</table>
